# remon-server

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/build-and-test/: action.yml
.github/workflows/: build-and-test-pr.yaml  build-and-test-push.yaml  build-and-test.yaml
proto/: notification.proto
src/: api.rs  auth_token.rs  get_otp.rs  get_otp_qr.rs  get_totp.rs  grpc.rs  logger.rs  main.rs  monitor.rs  notification_service.rs  persistence.rs
src/api/: _404.rs  get_cpu_status.rs  get_desc.rs  get_disk_status.rs  get_hardware_info.rs  get_mem_status.rs  get_otp_qr.rs  healthcheck.rs  hello.rs  login.rs  response_body.rs  send_test_notification.rs  teapot.rs  update_info.rs  validate_token_test.rs
src/auth/: mod.rs  otp.rs  token.rs
src/grpc/: grpc_service.rs
src/monitor/: _sys_status.rs  config_exceeds.rs  mod.rs  models.rs  persistence.rs  sys_status.rs  system_monitor.rs
src/monitor/models/: get_cpu_status.rs  get_disk_status.rs  get_hardware_info.rs  get_mem_status.rs
src/monitor/persistence/: hardware_cpu_info.rs  hardware_disk_info.rs  hardware_info.rs  hardware_mem_info.rs  monitor_config.rs  status_cpu.rs  status_disk.rs  status_mem.rs
src/notification_service/: errors.rs  fb_access_token.rs  jwt.rs
src/persistence/: app_logs.rs  notification_logs.rs
