[package]
name = "remon-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
base64 = "0.21.5"
chrono = "0.4.31"
dotenv = "0.15.0"
fast_qr = "0.10.3"
hyper = { version = "0.14.27", features = ["full"] }
jsonwebtoken = "9.1.0"
reqwest = "0.11.22"
ring = "0.17.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_derive = "1.0.190"
serde_json = "1.0.107"
thiserror = "1.0.50"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
sysinfo = "0.29.10"
tokio = { version = "1.33.0", features = ["full"] }
totp-rs = "5.4.0"
