[package]
name = "remon-server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
base64 = "0.21.5"
chrono = "0.4.35"
dotenv = "0.15.0"
fast_qr = "0.11.0"
hyper = { version = "0.14.27", features = ["full"] }
jsonwebtoken = "9.1.0"
reqwest = "0.11.22"
ring = "0.17.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_derive = "1.0.190"
serde_json = "1.0.107"
thiserror = "1.0.50"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
sysinfo = "0.30.3"
totp-rs = "5.4.0"
env_logger = "0.10.0"
log = "0.4.14"
local-ip-address = "0.5.6"
blake3 = "1.5.0"
maplit = "1.0.2"
lazy_static = "1.4.0"
async_once = "0.2.6"
fcm = { git = "https://github.com/rj76/fcm-rust.git", branch = "main" }
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
tonic-reflection = "0.11.0"
prost = "0.12.3"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
ctor = "0.2.6"
